[gd_scene load_steps=2 format=3 uid="uid://ds7x4i7rfyii8"]

[ext_resource type="Script" uid="uid://dmig7exyx62f3" path="res://scripts/CrewView.gd" id="1"]

[node name="CrewView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Left" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Left"]
layout_mode = 2
text = "Crew"

[node name="CrewHP" type="ProgressBar" parent="MarginContainer/HBoxContainer/Left"]
unique_name_in_owner = true
layout_mode = 2

[node name="CrewList" type="ItemList" parent="MarginContainer/HBoxContainer/Left"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="Right" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CrewName" type="Label" parent="MarginContainer/HBoxContainer/Right"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"

[node name="CrewDesc" type="Label" parent="MarginContainer/HBoxContainer/Right"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Select a crew member."

[node name="CrewStatus" type="Label" parent="MarginContainer/HBoxContainer/Right"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
